config/local-demo-server/istio/gateway-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-cloud-gateway-http
spec:
  selector:
    istio: ingressgateway
  servers:
    -
      hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP2
