config/local-demo-server/istio/gateway-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-cloud-gateway-https
spec:
  selector:
    istio: ingressgateway
  servers:
    -
      hosts:
        - edgecloud.zapto.org
      port:
        name: https-443-edgecloud-zapto-org
        number: 443
        protocol: HTTPS
      tls:
        credentialName: edgecloud-zapto-org
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
    -
      hosts:
        - api-edgecloud.zapto.org
      port:
        name: https-443-api-edgecloud-zapto-org
        number: 443
        protocol: HTTPS
      tls:
        credentialName: edgecloud-zapto-org
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
    -
      hosts:
        - idp-edgecloud.zapto.org
      port:
        name: https-443-idp-edgecloud-zapto-org
        number: 443
        protocol: HTTPS
      tls:
        credentialName: edgecloud-zapto-org
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
