config/local-demo-server/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-cloud-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    -
      hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
    -
      hosts:
        - '*'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: edgecloud-zapto-org
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
