config/local-demo-server/istio/api-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-edge-cloud
spec:
  gateways:
    - edge-cloud-gateway
  hosts:
    - api-edgecloud.zapto.org
  http:
    -
      match:
        -
          uri:
            prefix: /
      ignoreUriCase: true
      route:
        -
          destination:
            host: api-gateway.edge.svc.cluster.local
            port:
              number: 80
