config/local-demo-server/istio/idp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: idp-edge-cloud
spec:
  gateways:
    - edge-cloud-gateway
  hosts:
    - idp-edgecloud.zapto.org
  http:
    -
      match:
        -
          uri:
            prefix: /
      ignoreUriCase: true
      route:
        -
          destination:
            host: keycloak-http.edge.svc.cluster.local
            port:
              number: 80
