config/local-demo-server/istio/redirect-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redirect
  namespace: redirect
spec:
  hosts:
    - edgecloud.zapto.org
    - api-edgecloud.zapto.org
    - idp-edgecloud.zapto.org
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    -
      route:
        -
          destination:
            host: redirect
            port:
              number: 80
