config/local-demo-server/istio/virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-edge-cloud
  namespace: edge
spec:
  hosts:
    - edgecloud.zapto.org
  gateways:
    - istio-system/edge-cloud-gateway
  http:
    -
      match:
        -
          uri:
            prefix: /
      ignoreUriCase: true
      route:
        -
          destination:
            host: frontend.edge.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-edge-cloud
  namespace: edge
spec:
  hosts:
    - api-edgecloud.zapto.org
  gateways:
    - istio-system/edge-cloud-gateway
  http:
    -
      match:
        -
          uri:
            prefix: /
      ignoreUriCase: true
      route:
        -
          destination:
            host: api-gateway.edge.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: idp-edge-cloud
  namespace: edge
spec:
  hosts:
    - idp-edgecloud.zapto.org
  gateways:
    - istio-system/edge-cloud-gateway
  http:
    -
      match:
        -
          uri:
            prefix: /
      ignoreUriCase: true
      route:
        -
          destination:
            host: keycloak-http.edge.svc.cluster.local
            port:
              number: 80
